--- a/About Us.html
+++ b/About Us.html
@@ -67,7 +67,7 @@ menuToggle.addEventListener('click', () => {
       <div class="slide slide3"></div>
     </div>
     <div class="overlay">
-      <h1>About Us</h1>
+      <h1>About Me</h1>
     </div>
   </div>
 
