--- a/About Us.html
+++ b/About Us.html
@@ -163,11 +163,11 @@ html,js,css</p>
     <div class="footer-section links">
       <h3>Quick Links</h3>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="Contact.html">Services</a></li>
+        <li><a href="Services.html">Blog</a></li>
+        <li><a href="Contact.html">Contact</a></li>
        
       </ul>
     </div>
