--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
     <div class="footer-section links">
       <h3>Quick Links</h3>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
+      <li><a href="index.html">Home</a></li>
+        <li><a href="About.html">About</a></li>
+        <li><a href="Services.html">Services</a></li>
+        <li><a href="Services.html">Blog</a></li>
+        <li><a href="Contact.html">Contact</a></li>
        
       </ul>
     </div>
