--- a/Contact.html
+++ b/Contact.html
@@ -113,11 +113,11 @@ menuToggle.addEventListener('click', () => {
     <div class="footer-section links">
       <h3>Quick Links</h3>
       <ul>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Services</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="About Us.html">About</a></li>
+        <li><a href="Services.html">Services</a></li>
+        <li><a href="Servies.html">Blog</a></li>
+        <li><a href="Contact.html">Contact</a></li>
        
       </ul>
     </div>
