--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
       <h3>Quick Links</h3>
       <ul>
       <li><a href="index.html">Home</a></li>
-        <li><a href="About.html">About</a></li>
+        <li><a href="About Us.html">About</a></li>
         <li><a href="Services.html">Services</a></li>
         <li><a href="Services.html">Blog</a></li>
         <li><a href="Contact.html">Contact</a></li>
