--- a/About Us.html
+++ b/About Us.html
@@ -20,7 +20,6 @@
         <a href="index.html">Home</a>
         <a href="About Us.html">About</a>
         <a href="Services.html">Services</a>         
-        
         <a href="Contact.html">Contact</a>
       </nav>
       <div class="menu-toggle" id="menuToggle">
@@ -164,11 +163,10 @@ html,js,css</p>
       <h3>Quick Links</h3>
       <ul>
         <li><a href="index.html">Home</a></li>
-        <li><a href="About.html">About</a></li>
+        <li><a href="About Us.html">About</a></li>
         <li><a href="Contact.html">Services</a></li>
         <li><a href="Services.html">Blog</a></li>
         <li><a href="Contact.html">Contact</a></li>
-       
       </ul>
     </div>
 
