--- a/About Us.html
+++ b/About Us.html
@@ -164,8 +164,7 @@ html,js,css</p>
       <ul>
         <li><a href="index.html">Home</a></li>
         <li><a href="About Us.html">About</a></li>
-        <li><a href="Contact.html">Services</a></li>
-        <li><a href="Services.html">Blog</a></li>
+        <li><a href="Services.html">Services</a></li>
         <li><a href="Contact.html">Contact</a></li>
       </ul>
     </div>
