--- a/Contact.html
+++ b/Contact.html
@@ -52,7 +52,7 @@ menuToggle.addEventListener('click', () => {
 
 
 <section class="banner">
-        <h1>Contact Us</h1>
+        <h1>Contact Me</h1>
         <p>Reach our global teams and our partners from different countries across the world</p>
       </section>
    
@@ -125,7 +125,7 @@ menuToggle.addEventListener('click', () => {
     <!-- Contact Details -->
     <div class="footer-section contact">
      <h3>Location & Contact</h3>
-       <a href="#"></a></li>
+       <a href="Contact.html"></a></li>
       
       <p>🏠 House No. 793, I Block, <br>Jahangirpuri, Delhi - 110033</p>
       <p>📞 <a href="tel:+9891645536">+91 9891645536</a></p>
