--- a/About Us.html
+++ b/About Us.html
@@ -152,7 +152,11 @@ html,js,css</p>
 
 
 
-<!-- Right Side Buttons -->
+
+<!-- Font Awesome for Icons -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+<!-- Right Side / Bottom Buttons -->
 <div class="right-buttons">
   <a href="tel:919891645536" class="contact" title="Contact"><i class="fas fa-phone"></i></a>
   <a href="https://wa.me/919891645536" target="_blank" class="whatsapp" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
@@ -178,7 +182,6 @@ html,js,css</p>
     document.getElementById("enquireForm").classList.toggle("active");
   }
 </script>
-
 
     
 
