--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  <section class="hero">
     <div class="hero-content">
       <div class="avatar" id="avatar"></div>
-      <h1>Hi, I’m Shivanee, a Websites Developer</h1>
+      <h1>Hi, I’m Shivanee, a Website Developer</h1>
       <p>I create beautiful and functional websites using modern technologies.</p>
       <div class="cta-buttons">
         <a href="Services.html" class="btn">View Portfolio</a>
